--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
     background-size: 100% 100%;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url("../images/bg.jpg");
+    background-image: url("../images/1.jpg");
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
     -ms-transition: all .3s ease-out;
